# LLM_GTD_BENCHMARK

./: .gitignore  README.md  generate_synthetic.py  pre_experiment.py  pyproject.toml  run_benchmark.py  test.py
experiment1/: run_benchmark.py  smoke_test.py  visualize_results.py
experiment2/: README.md  generate_synthetic2.py  run_benchmark2.py  smoke_test2.py
llm_gtd_benchmark/: __init__.py
llm_gtd_benchmark/analysis/: README.md  __init__.py  profiler.py  significance.py
llm_gtd_benchmark/core/: README.md  __init__.py  exceptions.py  logic_spec.py  result_bundle.py  schema.py
llm_gtd_benchmark/example/: experiment_graft_bench.py  run_all_datasets.py  run_all_datasets_random.py  run_experiment.py  run_us_location.py
llm_gtd_benchmark/metrics/: README.md  __init__.py  dimension0.py  dimension1.py  dimension2.py  dimension3.py  dimension4.py  dimension5.py
llm_gtd_benchmark/pipeline/: README.md  __init__.py  config.py  runner.py
llm_gtd_benchmark/utils/: README.md  __init__.py  bootstrap.py  nn_backend.py  preprocessing.py
llm_gtd_benchmark/visualization/: __init__.py  aggregator.py
tests/: conftest.py  test_analysis.py  test_core.py  test_metrics.py  test_models.py  test_pipeline.py  test_preprocessing.py
